RESOLVED FIXED122485
[EFL] Minibrowser can't load child window's location
https://bugs.webkit.org/show_bug.cgi?id=122485
Summary [EFL] Minibrowser can't load child window's location
Ryuan Choi
Reported 2013-10-07 21:14:12 PDT
Minibrowser/Efl is not working with below simple script. <script> var a = function() { var w = window.open("", ""); w.location.href="http://www.webkit.org"; </script> It's because Minibrowser try to load "" although loaded started to load "webkit.org".
Attachments
Proposed patch (9.41 KB, patch)
2013-10-16 01:11 PDT, Rob Płóciennik
no flags
Rob Płóciennik
Comment 1 2013-10-16 01:11:05 PDT
Created attachment 214348 [details] Proposed patch
Ryuan Choi
Comment 2 2013-10-16 01:19:46 PDT
Comment on attachment 214348 [details] Proposed patch Looks good to me. Thanks for the patch.
Gyuyoung Kim
Comment 3 2013-10-16 01:21:37 PDT
Comment on attachment 214348 [details] Proposed patch Looks ok.
WebKit Commit Bot
Comment 4 2013-10-16 01:46:39 PDT
Comment on attachment 214348 [details] Proposed patch Clearing flags on attachment: 214348 Committed r157502: <http://trac.webkit.org/changeset/157502>
WebKit Commit Bot
Comment 5 2013-10-16 01:46:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.